--- a/src/css/index.css
+++ b/src/css/index.css
@@ -26,7 +26,7 @@
 }
 
 #experiencia #experience-grid .experience {
-  background: rgba(250, 248, 248, 0.041);
+  background: rgba(46, 46, 46, 0.781);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   padding: 20px;
@@ -90,17 +90,6 @@
   background-size: cover;
 }
 
-body {
-  background-color: #000;
-}
-
-html::-webkit-scrollbar {
-  width: 10px;
-}
-html::-webkit-scrollbar-thumb {
-  background-color: #2253FF;
-}
-
 #cursos #grid-cursos {
   position: relative;
 }
@@ -152,4 +141,43 @@ html::-webkit-scrollbar-thumb {
   #course-title-principals {
     max-width: 8ch;
   }
+}
+body {
+  background-color: #000;
+}
+
+html::-webkit-scrollbar {
+  width: 2px;
+}
+html::-webkit-scrollbar-thumb {
+  background-color: #2253FF;
+}
+
+#particles-js {
+  margin-top: 198px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.555), rgba(0, 0, 0, 0.788)), url("../img/bg2.jpg");
+  background-size: cover;
+  background-position: center;
+}
+#particles-js > .phrase {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  max-width: -moz-max-content;
+  max-width: max-content;
+}
+#particles-js > canvas {
+  z-index: 1;
+}
+
+footer {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
 }/*# sourceMappingURL=index.css.map */
