--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,13 +1,14 @@
 @import "./globals";
 @import "./index/experiencia";
+@import "./index/cursos";
 
 body {
-  background-color: #000;
+   background-color: #000;
 }
 
 html {
   &::-webkit-scrollbar {
-    width: 10px;
+    width: 2px;
   }
 
   &::-webkit-scrollbar-thumb {
@@ -15,74 +16,37 @@ html {
   }
 }
 
-#cursos {
-  #grid-cursos {
-position:relative;
 
-    .curso {
-      padding:20px;
-      h3 {
-        text-transform: uppercase;
-        margin-bottom:20px;
-        &::before {
-          content: "";
-          width: 20px;
-          height: 10px;
-          display: block;
-          background: linear-gradient(
-            115deg,
-            #2253ff 33.97%,
-            #f80d56 84.34%,
-            #ff7f22 150.83%
-          );
-        }
-      }
 
-      .platform,
-      .duration_course,
-      .learning {
-        display: flex;
-        flex-direction: row;
-        align-items:center;
-        gap:20px;
-        &::before {
-          content: "";
-          width: 28px;
-          height: 28px;
-        
-          display: block;
-          background-size:cover;
-          background-repeat:no-repeat;
-          flex-shrink:0;
-        }
-      }
 
-      .platform {
-        &::before{
-          background: url("../img/icons/graduation.svg");
-        }
-      }
+#particles-js {
+  margin-top:198px;
+  background-image:linear-gradient( rgba(0, 0, 0, 0.555),  rgba(0, 0, 0, 0.788)) ,url('../img/bg2.jpg');
+  background-size:cover;
+  background-position:center;
+  > .phrase {
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    padding:20px;
+    display:flex;
+    flex-direction:column;
+    gap:20px;
+    max-width:max-content;
 
-      .duration_course {
-        &::before{
-          background: url("../img/icons/ampulheta.svg");
-          background-position:center;
-        }
-      }
-
-      .learning {
-        &::before{
-          background: url("../img/icons/software\ learn.svg");
-         
-        }
-      }
-    }
   }
+
+ > canvas {
+    z-index:1;
+  }
+
+  
 }
 
-@media screen and (min-width:1520px) {
-  #course-title-principals {
-    max-width:8ch;
-    
-  }
+footer{
+  position:absolute;
+  width:100%;
+  bottom:0;
+  left:0;
 }
