--- a/src/scss/index/_experiencia.scss
+++ b/src/scss/index/_experiencia.scss
@@ -5,7 +5,8 @@
       // padding:20px;
       // border-radius:5px;
 
-      background: rgba(250, 248, 248, 0.041);
+      // background: rgba(250, 248, 248, 0.041);
+      background: rgba(46, 46, 46, 0.781);
       backdrop-filter: blur(5px);
       -webkit-backdrop-filter: blur(5px);
       padding:20px;
