--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,11 +3,11 @@ $blue-text:#2253FF;
 color:$blue-text;
 }
 
-$gray-text:#8F8F8F;
+$gray-text:#d8d8d8;
 .gray-text{
   color:$gray-text;
 }
 
-.bg-blur-dark {
+.bg-blur-ddark {
   background-color:#000000bb;
 }
