--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,7 +3,8 @@
 @import "./index/cursos";
 
 body {
-   background-color: #000;
+   background: #000 url('../img/background.png');
+   background-size:cover;
 }
 
 html {
