--- a/src/scss/index/_experiencia.scss
+++ b/src/scss/index/_experiencia.scss
@@ -6,11 +6,20 @@
       // border-radius:5px;
 
       // background: rgba(250, 248, 248, 0.041);
-      background: rgba(46, 46, 46, 0.781);
-      backdrop-filter: blur(5px);
-      -webkit-backdrop-filter: blur(5px);
-      padding:20px;
-      border-radius:10px;
+      // background: rgba(46, 46, 46, 0.781);
+      // backdrop-filter: blur(5px);
+      // -webkit-backdrop-filter: blur(5px);
+      // padding:20px;
+      // border-radius:10px;
+
+      /* From https://css.glass */
+      background: rgba(255, 255, 255, 0.15);
+      border-radius: 16px;
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(9.2px);
+      -webkit-backdrop-filter: blur(9.2px);
+      border: 1px solid rgba(255, 255, 255, 0.11);
+      padding: 20px;
 
       h3 {
         display: flex;
